# RainExtinguishesFires

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ProjectGen.py  README.md  vcpkg-configuration.json  vcpkg.json
Other Project Files/Prebuilt JSONs/: defaultEmbers_FIRE.json  defaultFires_FIRE.json  defaultGiantFires_FIRE.json  defaultSmokes_SMOKE.json
Other Project Files/Scripts/: REF_ObjectRefOffController.pex  REF_QuestEventHandler.pex  REF_RefAliasLoadManager.pex  REF_UtilityFunctions.pex
Other Project Files/Source/Scripts/: REF_ObjectRefOffController.psc  REF_QuestEventHandler.psc  REF_RefAliasLoadManager.psc  REF_UtilityFunctions.psc
cmake/: Version.h.in  headerlist.cmake  sourcelist.cmake
cmake/ports/clib-util/: portfile.cmake  vcpkg.json
include/: PCH.h  eventDispenser.h  eventListener.h  fireManipulator.h  fireRegister.h  hitManager.h  hooks.h  iniParser.h  jsonParser.h  loadEventManager.h  papyrus.h  papyrusManager.h  raycastHelper.h  settingsReader.h  startupTasks.h  utilityFunctions.h
src/: eventDispenser.cpp  eventListener.cpp  fireManipulator.cpp  fireRegister.cpp  hitEventManager.cpp  hooks.cpp  iniParser.cpp  jsonParser.cpp  loadEventManager.cpp  main.cpp  papyrus.cpp  papyrusManager.cpp  raycastHelper.cpp  settingsReader.cpp  startupTasks.cpp
